<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.ServiceActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btn_service_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btn_service_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_service_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_service_stop"
        app:layout_constraintEnd_toEndOf="@+id/btn_service_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_service_start"
        />

    <Button
        android:id="@+id/btn_service_bind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/btn_service_bind"
        app:layout_constraintStart_toStartOf="@+id/btn_service_stop"
        app:layout_constraintTop_toBottomOf="@+id/btn_service_stop"
        />

    <Button
        android:id="@+id/btn_service_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_service_intent"
        app:layout_constraintEnd_toEndOf="@+id/btn_service_bind"
        app:layout_constraintTop_toBottomOf="@+id/btn_service_bind"
        />
</android.support.constraint.ConstraintLayout>